--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,10 @@
 {
-    "version" : 2,
+    "version": 2,
     "builds": [
-      { "src": "./index.js", "use": "@vercel/node" }
+      { "src": "backend/src/index.js", "use": "@vercel/node" }
     ],
-    
     "routes": [
-        { "src": "/(.*)", "dest": "/" }
+      { "src": "/api/(.*)", "dest": "backend/src/index.js" },
+      { "src": "/(.*)", "dest": "frontend/$1" }
     ]
-      
   }
