--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,9 @@
 {
     "version": 2,
     "builds": [
-      { "src": "backend/src/index.js", "use": "@vercel/node" }
+      { "src": "backend/index.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "backend/src/index.js" },
-      { "src": "/(.*)", "dest": "frontend/$1" }
+      { "src": "/api/(.*)", "dest": "./index.js" }
     ]
   }
